creation de utilisateur et edition de la chaine partie admin

--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -12,19 +12,19 @@
             <!-- Begin Page Content -->
             <div class="container-fluid">
 
-                <div class="row mt-4 mb-2">
-                    <div class="col-xl-2">
+                <div class="row mt-2">
+                    <div class="col-sm-12">
                         <h4 class="h4 text-gray-800">Utilisateurs</h4>
                     </div>
 
-                    <div class="col-xl-10">
+                    <div class="col-sm-12">
 
                         <div class="conteneur d-flex flex-column align-items-center justify-content-center">
                             <div class="row recherche">
                                 <div class="col">
                                     <div class="form-group has-search ">
                                         <span class="fa fa-search form-control-feedback"></span>
-                                        <input type="text" class="form-control text-dark" placeholder="Rechercher une radio"> 
+                                        <input type="text" class="form-control text-dark" id="myInput" placeholder="Rechercher une radio"> 
                                     </div>
                                 </div>
                             </div>
@@ -55,7 +55,6 @@
                                         <tbody id='users-corps'>
                                             
                                                 
-                                            
                                         </tbody>
                                     </table>
                                     <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
