--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -426,17 +426,20 @@ a.btn.bouton-password{color: white; box-shadow: 0 6px 10px 0 #0000001a,0 1px 18p
 #channel-table th, td { 
     text-align: center;
     width: 153px !important;
-    color: #242427;
+    height: 50px !important;
+    color: #212529;
+    border-right: 2px solid #dee2e6;
 }
 
 #users-table th, td { 
     text-align: center;
     width: 153px !important;
-    color: #242427;
-    border-right: 1px solid black;
+    height: 50px !important;
+    color: #212529;
+    border-right: 2px solid #dee2e6;
 }
 
-#channel-table tr {border: 1px solid #5a5c69;}#users-table tr {border: 1px solid #5a5c69;}
+#channel-table tr {border: 1px solid #dee2e6;}#users-table tr {border: 1px solid #dee2e6;}
 
 /*#channel-table td:first-child td:last-child{
     
