--- a/templates/admin/channel/editChannel/editChannel.html.twig
+++ b/templates/admin/channel/editChannel/editChannel.html.twig
@@ -27,10 +27,11 @@
                     </div>
                     <div class="main d-flex flex-column align-items-center justify-content-center">
 
+                        <div class="row col-xl-12 alert alert-success"  style="display: none;" id="updatecompte" role="alert"></div>
                         <!--img logo-->
                         <div class="image-upload">
                             <label for="cameraInput">
-                                <img src="" alt="" id="profil">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="img" id="profil">
                                 <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                             </label>
                             <input type="file" accept="image/*" id="cameraInput">
@@ -43,7 +44,7 @@
                                      <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value=''> 
                                 </div>
                                 <div class="form-group editchannel">
-                                    <button id="button-settingsAdmin" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" >Enregistrer</button>
+                                    <input id="button-settingsAdmin" type='submit' class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;" value="Enregistrer">
                                 </div>
                                 
                             </div>
