--- a/templates/admin/channel/editChannel/script.html.twig
+++ b/templates/admin/channel/editChannel/script.html.twig
@@ -20,12 +20,75 @@
 
 $(document).ready(function() {
 
+    String.prototype.rtrim = function() {
+        return this.replace(/\s+$/, "");
+    }
+
+        function inputUsername(inputData,input){
+            let usernameData = inputData.rtrim();
+            let usernameInput = input;
+
+            if(usernameData.length < 1){
+                usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>');   
+                
+            }else{
+                if(usernameData > 10) {
+                    usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
+                }
+                return usernameData;
+                
+            }
+        }//  verify username
+
+    const reset = () => {
+        $(".btn_submit").attr("disabled", false);
+        $(".btn_submit").css("background-color", "#EF0051");
+        $(".btn_submit").hover(() => { $(".btn_submit").css("background-color", "#D31052") })
+    };
+
+    const disable = () => {
+        $(".btn_submit").attr("disabled", true);
+        $(".btn_submit").css("background-color", "gray");
+    }
+
     let firebaseConfig;
     let downloadUrl;
 
+    
+    const token = localStorage.getItem("token");
+    let idChannel = localStorage.getItem("userChannelId");
+
+    if(token !== "") {
+
+        $.ajax({
+            type: "POST", 
+            url: "/admin/channel/edit/show", 
+            data: JSON.stringify({
+                "token": token,
+                "idChannel": idChannel,
+            }),
+            dataType: 'json',
+            async: true,
+            success: function(response) {
+                reset();
+
+                if(response != undefined){
+
+                }
+
+                console.log(response);
+            },
+            error: function (error) {
+
+                reset();
+                console.log(error);
+            }
+        });
+    }
+
     $.ajax({
     method: "GET", 
-    url: "/admin/users/firebase", 
+    url: "/firebase", 
     async: true,
     success: function(data) {
     //console.log(data.apiKey+" "+data.authDomain+" "+data.databaseURL+" "+data.projectId+" "+data.storageBucket);
@@ -48,7 +111,7 @@ $(document).ready(function() {
 
         
             let filename = $('#cameraInput').val().replace(/C:\\fakepath\\/i, '');
-            let storageRef = firebase.storage().ref('/User/{{ channel.id }}' + filename);
+            let storageRef = firebase.storage().ref('/User/channel' + filename);
 
             // On envoi le fichier à Firebase
             let upload = storageRef.put(selectedFile);
@@ -67,47 +130,52 @@ $(document).ready(function() {
             
                 // On remplace l'URL de l'image par la nouvelle
                     $('#profil').attr('src', downloadUrl);
-                    $('#logo-setting').attr('src', downloadUrl)
-
-
-                        $('#button-settingsAdmin').click(function(e){
-                            e.preventDefault();
-                            console.log(downloadUrl)
-
-                             let channels = $('#channels').val();
-                            
-                                 $(".erreur").remove();
-
-                                if (channels.length < 3) 
-                                {
-                                    $('#channels').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>'); 
-                                }else if(channels.length > 10)
-                                {
-                                    $('#channels').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
-                                }
-                                
-                                
-
-                            $.ajax({
-                                    type: "POST", 
-                                    url: "/admin/channel/{{ channel.id }}/edit", 
-                                    data: JSON.stringify({
-                                        "downloadUrl": downloadUrl,
-                                        "channels": channels,
-                                    }),
-                                    async: true,
-                                    success: function(responseText) {
-                                        console.log('ici succ');
-                                    },
-                                    error: function (error) {
-                                        console.log(error);
-                                    }
-                            });
-
-                        });       
+                    $('#logo-setting').attr('src', downloadUrl) 
 
             });
-        });
+        });// change profil 
+
+
+
+        $('#button-settingsAdmin').click(function(e){
+                e.preventDefault();
+                disable();
+
+                let channels = $('#channels').val();
+                let inputChannel = $('#channels');
+
+                let profil = $('#profil').attr('src');
+
+                let channelName = inputEmail(channels,inputChannel);
+
+             if(token !== "" || channelName !== undefined){
+                        
+
+                $.ajax({
+                    type: "POST", 
+                    url: "/admin/channel/edit/update", 
+                    data: JSON.stringify({
+                        "token": token,
+                        "avatar": profil,
+                        "channelName": channelName,
+                    }),
+                    dataType: 'json',
+                    async: true,
+                    success: function(response) {
+                        reset();
+
+                        console.log(response);
+                    },
+                    error: function (error) {
+
+                        reset();
+                        console.log(error);
+                    }
+                });
+
+            }//if
+
+        });  //fin 
 
     }
 
