--- a/templates/admin/channel/script.html.twig
+++ b/templates/admin/channel/script.html.twig
@@ -20,7 +20,7 @@
 $(document).ready(function() {
 
     const token = localStorage.getItem("token");
-    let IdChannel = localStorage.getItem("channelId");
+    let IdChannel;
 
     if(token !== ""){
 
@@ -37,17 +37,38 @@ $(document).ready(function() {
                 if(response != undefined) {
 
                     let mytab;
+                    let idChannel;
 
                     for(let i=0; i<response.channels.length; i++){
-                        mytab += "<tr><td ><img class='rounded-circle' style='font-size:2em; width:31px; height:32px;' src='"+response.channels[i].avatar
-                        +"' id='profil'></td><td >"+response.channels[i].channel_name
-                        +"</td><td >"+response.channels[i].status
-                        +"</td><td ><a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='far fa-trash-alt fa-2x'></a><a href='{{ path('admin.channel.edit') }}' class='fa-2x far fa-edit' id='"
-                        +IdChannel+"'></a></td></tr>";
+                        idChannel = response.channels[i]._id;
+
+                        mytab += '<tr><td ><img class="rounded-circle" style="font-size:2em; width:31px; height:32px;" src="'+response.channels[i].avatar
+                        +'" id="profil"></td><td >'+response.channels[i].channel_name
+                        +'</td><td >'+response.channels[i].status
+                        +'</td><td ><a href="#bannirModal" data-toggle="modal" data-dismiss="modal" class="far fa-trash-alt fa-2x"></a><a href="/admin/channel/edit/'+response.channels[i]._id+'" class="fa-2x far fa-edit" id="'
+                        +response.channels[i]._id+'"></a></td></tr>';
                     }
                     
-                     $("#channels-corps").append(mytab);
+                    $("#channels-corps").append(mytab);
+
+                    $('.fa-edit').on("click", function(){
+
+                        let myId = $(this).attr("id");
+
+                       localStorage.setItem("userChannelId", myId);
+
+                            /*setTimeout(function(){
+
+                            window.location.href = "/admin/channel/edit/"+myId;
+
+                        }, 2000);*/
+
+                        console.log(myId);
+
+                    });
                 }
+
+
                 console.log(response);
                 
             },
@@ -58,20 +79,6 @@ $(document).ready(function() {
         }); //fin ajax
 
     }// fin if
-
-
-        $('.fa-edit').click((e) => {
-            e.preventDefault(); 
-
-            let myId = $(this).attr("id");
-
-            console.log(myId);
-
-        });
-
-
-
-
 
 
 
