correction apportée a la page home partie admin

--- a/templates/admin/channel/editChannel/editChannel.html.twig
+++ b/templates/admin/channel/editChannel/editChannel.html.twig
@@ -57,14 +57,14 @@
                     <!-- Content Row -->
                     <div class="row">
 
-                    <!-- Nombre d’utilisateurs Card Example -->
+                    <!-- Nombre favoris Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-principal justify-content-center">Nombre d’utilisateurs</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">98’578</div>
+                                    <div class="text-principal justify-content-center">Nombre favoris</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris">98’578</div>
                                 </div>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
                                     <div class="text-bleue">Nombre d’abonnés</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">44’577</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbAbonne">44’577</div>
                                 </div>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                             <div class="row">
                                 <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
                                     <div class="text-turquoise">Total d'écoutes</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">453’987</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbEcoute">453’987</div>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2  mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-purple">Nombre de chaînes créée</div>
+                                    <div class="text-purple">Nombre de stream créée</div>
                                     <div class="h5 mb-0 font-weight-bold text-gray-800">24’767</div>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                         <div class="card shadow mb-4">
                         <!-- Card Header - Dropdown -->
                         <div class="card-header d-flex flex-row align-items-center justify-content-between">
-                            <h6 class="text-purple">Nombre d’inscrits par mois</h6>
+                            <h6 class="text-purple">Nombre d’écoute par mois</h6>
                         </div>
                         <!-- Card Body -->
                         <div class="card-body">
